Wolo 273 gets for admin (#130)
* new gets for cities and districts

* gets for organisations

* swagger apdejt
