# src/main/resources/static/openapi.yaml
@@ -206,8 +206,8 @@ paths:
     get:
       tags:
         - Cities
-      summary: Show all cities
-      operationId: getAllCities
+      summary: Show all actual cities
+      operationId: getAllActualCities
       responses:
         '200':
           description: Success
@@ -217,6 +217,21 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/CityDto'
+  /cities/admin/all:
+    get:
+      tags:
+        - Cities
+      summary: Show all actual cities
+      operationId: getAllCities
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/CityResponseAdminDto'
   /cities/{id}:
     get:
       tags:
@@ -313,6 +328,21 @@ paths:
     get:
       tags:
         - Districts
+      summary: Get all actual districts
+      operationId: getActualDistricts
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/DistrictResponseDto'
+  /districts/admin/all:
+    get:
+      tags:
+        - Districts
       summary: Get all districts
       operationId: getDistricts
       responses:
@@ -323,7 +353,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/DistrictResponseDto'
+                  $ref: '#/components/schemas/DistrictResponseAdminDto'
   /districts/{id}:
     get:
       tags:
@@ -874,8 +904,22 @@ paths:
       responses:
         '204':
           $ref: '#/components/responses/NoContentResponse'
-
   /organisations:
+    get:
+      tags:
+        - Organisations
+      summary: Get all approved organisations
+      operationId: getApprovedOrganisations
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/OrganisationResponseDto'
+  /organisations/admin/all:
     get:
       tags:
         - Organisations
@@ -889,7 +933,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/OrganisationResponseDto'
+                  $ref: '#/components/schemas/OrganisationResponseAdminDto'
   /organisations/{id}:
     get:
       tags:
@@ -1708,6 +1752,29 @@ components:
             minLength: 0
             type: string
             example: Brodway 123
+    CityResponseAdminDto:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          example: 1
+        name:
+          maxLength: 50
+          minLength: 0
+          type: string
+          example: New York City
+        districts:
+          maxItems: 2147483647
+          minItems: 1
+          type: array
+          items:
+            maxLength: 50
+            minLength: 0
+            type: string
+            example: Brodway 123
+        old:
+          type: boolean
     DistrictRequestDto:
       required:
         - name
@@ -1744,6 +1811,25 @@ components:
           minLength: 0
           type: string
           example: New York City
+    DistrictResponseAdminDto:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          example: 1
+        name:
+          maxLength: 50
+          minLength: 0
+          type: string
+          example: DownTown
+        cityName:
+          maxLength: 50
+          minLength: 0
+          type: string
+          example: New York City
+        old:
+          type: boolean
     EventRequestDto:
       required:
         - name
@@ -1814,7 +1900,6 @@ components:
           type: integer
           format: int64
           example: 1
-
     EventResponseDetailsDto:
       type: object
       properties:
@@ -1932,7 +2017,6 @@ components:
         city:
           type: string
           example: New York City
-
     EventResponseDto:
       type: object
       properties:
@@ -1976,7 +2060,6 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/ShiftResponseDto'
-
     OrganisationRequestDto:
       required:
         - name
@@ -2055,6 +2138,70 @@ components:
           minLength: 0
           type: string
           example: https://example.com/image.jpg
+    OrganisationResponseAdminDto:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          example: 1
+        name:
+          maxLength: 250
+          minLength: 0
+          type: string
+          example: Animal Helpers
+        description:
+          type: string
+          example: >-
+            Are you passionate about making a positive impact on the lives of
+            animals in need? Animal Helpers is
+
+            dedicated to providing compassionate care and support for animals at
+            our local animal shelter.
+
+            As part of our organization, you'll have the opportunity to play a
+            vital role in ensuring the well-being
+
+            and happiness of animals awaiting their forever homes.
+
+
+            Our Mission:
+                - Provide shelter and care for animals in need.
+                - Facilitate adoptions and find loving homes for our animals.
+                - Educate the community about responsible pet ownership and animal welfare.
+
+            Volunteer Opportunities:
+                - Animal Care: Assist in feeding, grooming, and providing basic care for shelter animals.
+                - Adoption Assistance: Interact with potential adopters and facilitate the adoption process.
+                - Community Outreach: Participate in events and educational programs to promote animal welfare.
+
+            Join us today and make a difference in the lives of animals in need!
+        email:
+          maxLength: 50
+          minLength: 0
+          type: string
+          example: example@mail.com
+        phoneNumber:
+          maxLength: 9
+          minLength: 9
+          type: string
+        street:
+          maxLength: 50
+          minLength: 0
+          type: string
+          example: Broadway
+        homeNum:
+          maxLength: 10
+          minLength: 0
+          type: string
+          example: 123
+        logoUrl:
+          maxLength: 255
+          minLength: 0
+          type: string
+          example: https://example.com/image.jpg
+        approved:
+          type: boolean
     OrganisationResponseDto:
       type: object
       properties:
@@ -2316,7 +2463,6 @@ components:
         shiftDirectionsRU:
           type: string
           example: Левая сторона здания
-
     UserRequestDto:
       required:
         - firstName
